ecs/world.h

struct ecs_world_s;
typedef struct ecs_world_s ecs_world_t;
typedef uint64_t ecs_entity_t;
typedef uint16_t ecs_component_t;
typedef uint16_t ecs_query_id_t;
typedef uint16_t ecs_event_t;
typedef struct {
    ecs_world_t *world;
    ecs_entity_t entity;
    ecs_event_t event;
    uintptr_t user_data;
    const void *trigger_data;
} ecs_observer_event_t;
typedef void (*ecs_observer_callback_t)(ecs_observer_event_t *event);
// Component hooks receive the new value passed to ecs_set_cid. The stored value
// is still the old one until the hook returns, so ecs_get_cid can read old data.
typedef void (*ecs_component_hook_t)(ecs_world_t *world, ecs_entity_t entity, ecs_component_t component, const void *ptr);
typedef struct {
    const char *name;
    uint64_t size;
    ecs_component_hook_t on_set;
    ecs_component_hook_t on_remove;
    bool is_relation;
} ecs_component_desc_t;
typedef struct {
    ecs_component_t read[8];
    ecs_component_t required[8];
    ecs_component_t excluded[4];
} ecs_query_desc_t;
void ecs_fini(ecs_world_t *world);
ecs_component_t ecs_component_init(ecs_world_t *world, const ecs_component_desc_t *desc);
ecs_entity_t ecs_new(ecs_world_t *world);
int ecs_is_alive(ecs_world_t *world, ecs_entity_t entity);
void ecs_kill(ecs_world_t *world, ecs_entity_t entity);
uint32_t ecs_query_init(ecs_world_t *world, const ecs_query_desc_t *query);
void ecs_add_cid(ecs_world_t *world, ecs_entity_t entity, ecs_component_t id);
void ecs_remove_cid(ecs_world_t *world, ecs_entity_t entity, ecs_component_t id);
bool ecs_has_cid(ecs_world_t *world, ecs_entity_t entity, ecs_component_t id);
void *ecs_get_cid(ecs_world_t *world, ecs_entity_t entity, ecs_component_t id);
void *ecs_try_get_cid(ecs_world_t *world, ecs_entity_t entity, ecs_component_t cid);
void ecs_set_cid(ecs_world_t *world, ecs_entity_t entity, ecs_component_t id, const void *data);
void ecs_with(ecs_world_t *world, ecs_component_t component, ecs_component_t require);
typedef struct {
    ecs_event_t on;
    ecs_query_desc_t query;
    ecs_observer_callback_t callback;
    uintptr_t user_data;
} ecs_observer_desc_t;
ecs_event_t ecs_event(ecs_world_t *world);
uint32_t ecs_observer_init(ecs_world_t *world, const ecs_observer_desc_t *desc);
void ecs_observer_trigger(
    ecs_world_t *world,
    ecs_entity_t entity,
    ecs_event_t event,
    void *trigger_data
);
typedef struct {
    ecs_world_t *world;
    struct ecs_query_cache_s *cache;
    void ***ptrs;
    uint16_t table_idx;
    uint16_t table_count;
    uint32_t count;
} ecs_iter_t;
ecs_iter_t ecs_query_iter(ecs_world_t *world, ecs_query_id_t query_id);
bool ecs_iter_next(ecs_iter_t *it);