bindings/siecs_rust/src/raw/generated.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ecs_world_feat_desc_t"][::core::mem::size_of::<ecs_world_feat_desc_t>() - 4usize];
    ["Alignment of ecs_world_feat_desc_t"]
        [::core::mem::align_of::<ecs_world_feat_desc_t>() - 2usize];
    ["Offset of field: ecs_world_feat_desc_t::rest"]
        [::core::mem::offset_of!(ecs_world_feat_desc_t, rest) - 0usize];
    ["Offset of field: ecs_world_feat_desc_t::target_fps"]
        [::core::mem::offset_of!(ecs_world_feat_desc_t, target_fps) - 2usize];
};
unsafe extern "C" {
    pub fn ecs_init_w_features(features: *const ecs_world_feat_desc_t) -> *mut ecs_world_t;
}
unsafe extern "C" {
    pub fn ecs_fini(world: *mut ecs_world_t);
}
unsafe extern "C" {
    pub fn ecs_quit(world: *mut ecs_world_t);
}
unsafe extern "C" {
    pub fn ecs_module_init(
        world: *mut ecs_world_t,
        desc: *const ecs_module_desc_t,
    ) -> ecs_module_id_t;
}
unsafe extern "C" {
    pub fn ecs_module_find(world: *mut ecs_world_t, id: *const ecs_module_id_t) -> ecs_module_id_t;
}
unsafe extern "C" {
    pub fn ecs_module_enable(world: *mut ecs_world_t, module: ecs_module_id_t);
}
unsafe extern "C" {
    pub fn ecs_module_disable(world: *mut ecs_world_t, module: ecs_module_id_t);
}
unsafe extern "C" {
    pub fn ecs_module_is_enabled(world: *const ecs_world_t, module: ecs_module_id_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_component_init(
        world: *mut ecs_world_t,
        desc: *const ecs_component_desc_t,
    ) -> ecs_component_t;
}
unsafe extern "C" {
    pub fn ecs_component_register(
        world: *mut ecs_world_t,
        id: *mut ecs_component_t,
        desc: *const ecs_component_desc_t,
    ) -> ecs_component_t;
}
unsafe extern "C" {
    pub fn ecs_new(world: *mut ecs_world_t) -> ecs_entity_t;
}
unsafe extern "C" {
    pub fn ecs_defer_begin(world: *mut ecs_world_t);
}
unsafe extern "C" {
    pub fn ecs_defer_end(world: *mut ecs_world_t);
}
unsafe extern "C" {
    pub fn ecs_is_deferred(world: *const ecs_world_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_is_alive(world: *const ecs_world_t, entity: ecs_entity_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_is(world: *mut ecs_world_t, entity: ecs_entity_t, target: ecs_entity_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_is_a(world: *mut ecs_world_t, entity: ecs_entity_t, target: ecs_entity_t);
}
unsafe extern "C" {
    pub fn ecs_kill(world: *mut ecs_world_t, entity: ecs_entity_t);
}
unsafe extern "C" {
    pub fn ecs_query_init(
        world: *mut ecs_world_t,
        query: *const ecs_query_desc_t,
    ) -> ecs_query_id_t;
}
unsafe extern "C" {
    pub fn ecs_query_fini(world: *mut ecs_world_t, qid: ecs_query_id_t);
}
unsafe extern "C" {
    pub fn ecs_add_cid(world: *mut ecs_world_t, entity: ecs_entity_t, id: ecs_component_t);
}
unsafe extern "C" {
    pub fn ecs_remove_cid(world: *mut ecs_world_t, entity: ecs_entity_t, id: ecs_component_t);
}
unsafe extern "C" {
    pub fn ecs_has_cid(
        world: *const ecs_world_t,
        entity: ecs_entity_t,
        id: ecs_component_t,
    ) -> bool;
}
unsafe extern "C" {
    pub fn ecs_has_cid_owned(
        world: *const ecs_world_t,
        entity: ecs_entity_t,
        id: ecs_component_t,
    ) -> bool;
}
unsafe extern "C" {
    pub fn ecs_get_cid(
        world: *mut ecs_world_t,
        entity: ecs_entity_t,
        id: ecs_component_t,
    ) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn ecs_try_get_cid(
        world: *mut ecs_world_t,
        entity: ecs_entity_t,
        cid: ecs_component_t,
    ) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn ecs_set_cid(
        world: *mut ecs_world_t,
        entity: ecs_entity_t,
        id: ecs_component_t,
        data: *const ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn ecs_move_cid(
        world: *mut ecs_world_t,
        entity: ecs_entity_t,
        id: ecs_component_t,
        data: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn ecs_resource_init(
        world: *mut ecs_world_t,
        desc: *const ecs_resource_desc_t,
    ) -> ecs_resource_t;
}
unsafe extern "C" {
    pub fn ecs_resource_register(
        world: *mut ecs_world_t,
        id: *mut ecs_resource_t,
        desc: *const ecs_resource_desc_t,
    ) -> ecs_resource_t;
}
unsafe extern "C" {
    pub fn ecs_resource_find(
        world: *mut ecs_world_t,
        name: *const ::core::ffi::c_char,
    ) -> ecs_resource_t;
}
unsafe extern "C" {
    pub fn ecs_resource_is_registered_rid(world: *const ecs_world_t, id: ecs_resource_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_set_resource_rid(
        world: *mut ecs_world_t,
        id: ecs_resource_t,
        data: *const ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn ecs_move_resource_rid(
        world: *mut ecs_world_t,
        id: ecs_resource_t,
        data: *mut ::core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn ecs_resource_rid(
        world: *mut ecs_world_t,
        id: ecs_resource_t,
    ) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn ecs_try_resource_rid(
        world: *mut ecs_world_t,
        id: ecs_resource_t,
    ) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn ecs_has_resource_rid(world: *const ecs_world_t, id: ecs_resource_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_remove_resource_rid(world: *mut ecs_world_t, id: ecs_resource_t);
}
unsafe extern "C" {
    pub fn ecs_with(world: *mut ecs_world_t, component: ecs_component_t, require: ecs_component_t);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ecs_observer_desc_t {
    pub on: ecs_event_t,
    pub query: ecs_query_desc_t,
    pub callback: ecs_observer_callback_t,
    pub user_data: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ecs_observer_desc_t"][::core::mem::size_of::<ecs_observer_desc_t>() - 544usize];
    ["Alignment of ecs_observer_desc_t"][::core::mem::align_of::<ecs_observer_desc_t>() - 8usize];
    ["Offset of field: ecs_observer_desc_t::on"]
        [::core::mem::offset_of!(ecs_observer_desc_t, on) - 0usize];
    ["Offset of field: ecs_observer_desc_t::query"]
        [::core::mem::offset_of!(ecs_observer_desc_t, query) - 8usize];
    ["Offset of field: ecs_observer_desc_t::callback"]
        [::core::mem::offset_of!(ecs_observer_desc_t, callback) - 528usize];
    ["Offset of field: ecs_observer_desc_t::user_data"]
        [::core::mem::offset_of!(ecs_observer_desc_t, user_data) - 536usize];
};
unsafe extern "C" {
    pub fn ecs_event(world: *mut ecs_world_t) -> ecs_event_t;
}
unsafe extern "C" {
    pub fn ecs_event_register(world: *mut ecs_world_t, id: *mut ecs_event_t) -> ecs_event_t;
}
unsafe extern "C" {
    pub fn ecs_observer_init(
        world: *mut ecs_world_t,
        desc: *const ecs_observer_desc_t,
    ) -> ecs_observer_id_t;
}
unsafe extern "C" {
    pub fn ecs_observer_enable(world: *mut ecs_world_t, id: ecs_observer_id_t);
}
unsafe extern "C" {
    pub fn ecs_observer_disable(world: *mut ecs_world_t, id: ecs_observer_id_t);
}
unsafe extern "C" {
    pub fn ecs_observer_trigger(
        world: *mut ecs_world_t,
        entity: ecs_entity_t,
        event: ecs_event_t,
        trigger_data: *const ::core::ffi::c_void,
    );
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum ecs_field_kind_t {
    None = 0,
    Owned = 1,
    Shared = 2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ecs_iter_t {
    pub world: *mut ecs_world_t,
    pub count: u32,
    pub entities: *mut ecs_entity_t,
    pub ptrs: *mut *mut ::core::ffi::c_void,
    pub delta_time: f32,
    pub cache: *mut ecs_query_cache_s,
    pub field_kinds: *mut ecs_field_kind_t,
    pub user_data: usize,
    pub table_idx: u16,
    pub table_count: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ecs_iter_t"][::core::mem::size_of::<ecs_iter_t>() - 72usize];
    ["Alignment of ecs_iter_t"][::core::mem::align_of::<ecs_iter_t>() - 8usize];
    ["Offset of field: ecs_iter_t::world"][::core::mem::offset_of!(ecs_iter_t, world) - 0usize];
    ["Offset of field: ecs_iter_t::count"][::core::mem::offset_of!(ecs_iter_t, count) - 8usize];
    ["Offset of field: ecs_iter_t::entities"]
        [::core::mem::offset_of!(ecs_iter_t, entities) - 16usize];
    ["Offset of field: ecs_iter_t::ptrs"][::core::mem::offset_of!(ecs_iter_t, ptrs) - 24usize];
    ["Offset of field: ecs_iter_t::delta_time"]
        [::core::mem::offset_of!(ecs_iter_t, delta_time) - 32usize];
    ["Offset of field: ecs_iter_t::cache"][::core::mem::offset_of!(ecs_iter_t, cache) - 40usize];
    ["Offset of field: ecs_iter_t::field_kinds"]
        [::core::mem::offset_of!(ecs_iter_t, field_kinds) - 48usize];
    ["Offset of field: ecs_iter_t::user_data"]
        [::core::mem::offset_of!(ecs_iter_t, user_data) - 56usize];
    ["Offset of field: ecs_iter_t::table_idx"]
        [::core::mem::offset_of!(ecs_iter_t, table_idx) - 64usize];
    ["Offset of field: ecs_iter_t::table_count"]
        [::core::mem::offset_of!(ecs_iter_t, table_count) - 66usize];
};
unsafe extern "C" {
    pub fn ecs_query_iter(world: *mut ecs_world_t, query_id: ecs_query_id_t) -> ecs_iter_t;
}
unsafe extern "C" {
    pub fn ecs_iter_next(it: *mut ecs_iter_t) -> bool;
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum ecs_phase_t {
    PreStart = 0,
    Start = 1,
    PostStart = 2,
    OnLoad = 3,
    PostLoad = 4,
    PreUpdate = 5,
    OnUpdate = 6,
    PostUpdate = 7,
    PreRender = 8,
    OnRender = 9,
    PostRender = 10,
    PhaseCount = 11,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ecs_system_desc_t {
    pub name: *const ::core::ffi::c_char,
    pub query: ecs_query_desc_t,
    pub callback: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ecs_iter_t)>,
    pub user_data: usize,
    pub user_data_dtor: ::core::option::Option<unsafe extern "C" fn(user_data: usize)>,
    pub phase: ecs_phase_t,
    pub after: [ecs_system_id_t; 16usize],
    pub disabled: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ecs_system_desc_t"][::core::mem::size_of::<ecs_system_desc_t>() - 592usize];
    ["Alignment of ecs_system_desc_t"][::core::mem::align_of::<ecs_system_desc_t>() - 8usize];
    ["Offset of field: ecs_system_desc_t::name"]
        [::core::mem::offset_of!(ecs_system_desc_t, name) - 0usize];
    ["Offset of field: ecs_system_desc_t::query"]
        [::core::mem::offset_of!(ecs_system_desc_t, query) - 8usize];
    ["Offset of field: ecs_system_desc_t::callback"]
        [::core::mem::offset_of!(ecs_system_desc_t, callback) - 528usize];
    ["Offset of field: ecs_system_desc_t::user_data"]
        [::core::mem::offset_of!(ecs_system_desc_t, user_data) - 536usize];
    ["Offset of field: ecs_system_desc_t::user_data_dtor"]
        [::core::mem::offset_of!(ecs_system_desc_t, user_data_dtor) - 544usize];
    ["Offset of field: ecs_system_desc_t::phase"]
        [::core::mem::offset_of!(ecs_system_desc_t, phase) - 552usize];
    ["Offset of field: ecs_system_desc_t::after"]
        [::core::mem::offset_of!(ecs_system_desc_t, after) - 556usize];
    ["Offset of field: ecs_system_desc_t::disabled"]
        [::core::mem::offset_of!(ecs_system_desc_t, disabled) - 588usize];
};
unsafe extern "C" {
    pub fn ecs_system_init(
        world: *mut ecs_world_t,
        desc: *const ecs_system_desc_t,
    ) -> ecs_system_id_t;
}
unsafe extern "C" {
    pub fn ecs_progress(world: *mut ecs_world_t) -> bool;
}
unsafe extern "C" {
    pub fn ecs_run_phase(world: *mut ecs_world_t, phase: ecs_phase_t);
}
unsafe extern "C" {
    pub fn ecs_run_system(world: *mut ecs_world_t, system: ecs_system_id_t);
}
unsafe extern "C" {
    pub fn ecs_system_enable(world: *mut ecs_world_t, system: ecs_system_id_t);
}
